fix qrcode visibility

--- a/src/components/QR/QR.module.scss
+++ b/src/components/QR/QR.module.scss
@@ -1,7 +1,9 @@
 .qrcontainer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100vw;
+  height: 64px;
+  background-color: rgba(255, 255, 255, 1);
 }
 
 .qr {
